<resources xmlns:tools="http://schemas.android.com/tools">
    <!--App global-->
    <string name="app_name">Pet Finder</string>
    <string name="app_description">Pet finder</string>

    <!--Error messages-->
    <string name="empty_zip_error">You must search for a location</string>

    <!--Home screen-->
    <string name="search">Search</string>
    <string name="shelter">Shelter</string>
    <string name="about">About</string>

    <!--Pet search-->
    <string name="location_search">Search address or region</string>

    <string name="animal">Animal</string>
    <string name="breed">Breed</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>

    <string name="any" tools:ignore="UnusedResources">Any</string>
    <string name="cat" tools:ignore="UnusedResources">Cat</string>
    <string name="dog" tools:ignore="UnusedResources">Dog</string>
    <string name="rabbit" tools:ignore="UnusedResources">Rabbit</string>
    <string name="smallfurry" tools:ignore="UnusedResources">"Small &amp; Furry"</string>
    <string name="horse" tools:ignore="UnusedResources">Horse</string>
    <string name="bird" tools:ignore="UnusedResources">Bird</string>
    <string name="reptile" tools:ignore="UnusedResources">Scales, Fins &amp; Others</string>
    <string name="pig" tools:ignore="UnusedResources">Pig</string>
    <string name="barnyard" tools:ignore="UnusedResources">Barnyard</string>

    <!--Pet result-->

    <!--Pet-->
    <string name="contact_information">Contact information</string>

    <!--Shelter search-->
    <string name="group_name">Group name</string>
    <string name="send_mail">Send mail…</string>

    <!--Shelter results-->
    <string name="no_results">No results</string>

    <!-- Shelter item-->
    <string name="directions">Directions</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="no_dialer_found">Sorry, your device doesn\'t support phone calls</string>
    <string name="pet_image_content_descriptor">Pet photo</string>
    <string name="sorry_something_went_wrong">Sorry, something went wrong</string>

</resources>
