<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_shelter"
        android:enabled="true"
        android:icon="@drawable/ic_pets_black_24dp"
        android:title="@string/shelter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/about"
        app:showAsAction="ifRoom" />
</menu>